--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Organization', new_organization_path %>
+<%= link_to 'Create New Organization', new_organization_path %>
