created helper for dynamic submit text

--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -18,10 +18,10 @@
 
   <div class="field">
     <%= form.label :hourly_rate %>
-    <%= form.text_field :hourly_rate %>
+    <%= form.text_field :hourly_rate, type: 'number', step: '0.01' %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= dynamic_submit(form) %>
   </div>
 <% end %>
