succesfully logged out

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 
   <body>
     <%= link_to 'Adnat', '/' %>
+    <br>
+    <%= dispaly_user if logged_in? %>
     <%= yield %>
   </body>
 </html>
