--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,6 +1,8 @@
-<p id="notice"><%= notice %></p>
+<p id="notice"><%= notice %>
+  You are not a member of any organisations. Join an existing one or create a new one.
+</p>
 
-<h1>Organizations</h1>
+<h1>Organisations</h1>
 
 <table>
   <thead>
