created Organization instance method to get all associated shifts

--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Shifts</h1>
+<h1><%= current_user.organization.name %></h1>
+<h2>Shifts</h2>
 
 <table>
   <thead>
