--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,14 +10,10 @@
   <%= @user.email_address %>
 </p>
 
-<p>
-  <strong>Password digest:</strong>
-  <%= @user.password_digest %>
-</p>
 
 <p>
   <strong>Organization:</strong>
-  <%= @user.organization_id %>
+  <%= @user.organization.name %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
