--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -10,5 +10,7 @@
   <%= @organization.hourly_rate %>
 </p>
 
+<%= link_to 'View Shifts', shifts_path %> |
 <%= link_to 'Edit', edit_organization_path(@organization) %> |
-<%= link_to 'Back', organizations_path %>
+<%= link_to 'Leave', leave_organization_path %> 
+
