--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -6,10 +6,13 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
-      <th>Start</th>
-      <th>Finish</th>
-      <th>Break length</th>
+      <th>Employee Name</th>
+      <th>Shift Date</th>
+      <th>Start Time</th>
+      <th>Finish Time</th>
+      <th>Break length (minutes)</th>
+      <th>Hours Worked</th>
+      <th>Shift Cost</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,13 +20,13 @@
   <tbody>
     <% @shifts.each do |shift| %>
       <tr>
-        <td><%= shift.user_id %></td>
-        <td><%= shift.start %></td>
-        <td><%= shift.finish %></td>
+        <td><%= shift.user.name %></td>
+        <td><%= shift.start.strftime('%D') %></td>
+        <td><%= shift.start.strftime('%I:%M%p') %></td>
+        <td><%= shift.finish.strftime('%I:%M%p') %></td>
         <td><%= shift.break_length %></td>
-        <td><%= link_to 'Show', shift %></td>
-        <td><%= link_to 'Edit', edit_shift_path(shift) %></td>
-        <td><%= link_to 'Destroy', shift, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= shift.hours_worked %></td>
+        <td><%=  %></td>
       </tr>
     <% end %>
   </tbody>
