--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -12,5 +12,5 @@
 
 <%= link_to 'View Shifts', shifts_path %> |
 <%= link_to 'Edit', edit_organization_path(@organization) %> |
-<%= link_to 'Leave', leave_organization_path %> 
+<%= link_to 'Leave', leave_organization_path, method: 'patch' %> 
 
