--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -18,9 +18,8 @@
       <tr>
         <td><%= organization.name %></td>
         <td><%= organization.hourly_rate %></td>
-        <td><%= link_to 'Show', organization %></td>
+        <td><%= link_to 'Join', join_organization_path(organization), method: 'patch' %></td>
         <td><%= link_to 'Edit', edit_organization_path(organization) %></td>
-        <td><%= link_to 'Destroy', organization, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
