users can now reset their password

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,12 +25,12 @@
     <%= form.label :password %>
     (6 Characters minimum)
     <br>
-    <%= form.text_field :password, type: 'password' %>
+    <%= form.password_field :password %>
   </div>
 
   <div class="field">
     <%= form.label :password_confirmation %>
-    <%= form.text_field :password_confirmation, type: 'password' %>
+    <%= form.password_field :password_confirmation %>
   </div>
 
   <div class="actions">
