password fields for users only appear on new form

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,11 +10,12 @@
   <%= @user.email_address %>
 </p>
 
-
-<p>
-  <strong>Organization:</strong>
-  <%= @user.organization.name %>
-</p>
+<%if @user.organization %>
+  <p>
+    <strong>Organization:</strong>
+    <%= @user.organization.name %>
+  </p>
+<%end%>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
