--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -13,11 +13,14 @@
 <% end %>
 
 <%= form_with model: @user, url: password_reset_edit_path(token: params[:token]) do |form| %>
-  <%= form.label :password %>
-  <%= form.password_field :password %>
-  <br>
-  <%= form.label :password_confirmation %>
-  <%= form.password_field :password_confirmation %>
-  <br>
+   <div class="field">
+    <%= form.label :password %>
+    <%= form.password_field :password %>
+  </div>
+
+  <div class="field">
+    <%= form.label :password_confirmation %>
+    <%= form.password_field :password_confirmation %>
+  </div>
   <%= form.submit 'Reset Password' %>
 <%end%>
