--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -21,15 +21,17 @@
     <%= form.text_field :email_address %>
   </div>
 
-  <div class="field">
-    <%= form.label :password %>
-    <%= form.password_field :password %>
-  </div>
+  <% if params[:action] == 'new' %>
+    <div class="field">
+      <%= form.label :password %>
+      <%= form.password_field :password %>
+    </div>
 
-  <div class="field">
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation %>
-  </div>
+    <div class="field">
+      <%= form.label :password_confirmation %>
+      <%= form.password_field :password_confirmation %>
+    </div>
+  <%end%>
 
   <div class="actions">
     <%= form.submit %>
