--- a/app/views/layouts/_display_user.html.erb
+++ b/app/views/layouts/_display_user.html.erb
@@ -1,4 +1,7 @@
 <p>
   <%= "Logged in as: #{current_user.name}. " %>
+  <br>
+  <%= link_to 'Profile', @user %>
+  <br>
   <%= link_to 'Logout', logout_path, method: 'delete' %>
 </p>
