--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,5 +17,6 @@
   </p>
 <%end%>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
+<%= link_to 'Change Password', password_path %> |
+<%= link_to 'Edit Profile', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
