--- a/app/views/shifts/index.html.erb
+++ b/app/views/shifts/index.html.erb
@@ -13,6 +13,8 @@
       <th>Break length (minutes)</th>
       <th>Hours Worked</th>
       <th>Shift Cost</th>
+      <th>Edit</th>
+      <th>Delete</th>
     </tr>
   </thead>
 
@@ -26,7 +28,10 @@
         <td><%= shift.break_length %></td>
         <td><%= shift.hours_worked %></td>
         <td>$<%= shift.cost(@organization.hourly_rate) %></td>
+        <td><%= link_to 'Edit', edit_shift_path(shift) %></td>
+        <td><%= link_to 'Delete', shift_path(shift), method: 'delete' %></td>
       </tr>
+      
     <% end %>
     
   </tbody>
