--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<h2 id="alert"><%= alert %></h2>
+<h2 style='color: red'><%= alert %></h2>
 
 
 <%= form_with model: @user, url: password_path do |form| %>
